Fixed Genre, Rank, Search components responsiveness, added search button in Navigation component on mobile device

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -4,6 +4,11 @@
     }
 }
 
+@media (min-width: 1199px) {
+    .nav-search-item {
+        display: none;
+    }
+}
 
 .nav-col {
     z-index: 1;
