--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -34,3 +34,7 @@
     border-radius: 50%;
     opacity: 90%;
 }
+
+.search-box {
+    max-width: 80%;
+}
